# heliotelligence

./: .coverage  .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yml
config/: module_library.yaml  sites.example.yaml  sites.yaml
data_migration/: load.sql  load_si.sql  ts_alerts.csv  ts_expected_energy.csv  ts_inverters.csv  ts_meter_readings.csv  ts_site_instruments.csv  ts_sites.csv  ts_string_readings.csv  ts_user_site_access.csv  ts_weather_readings.csv
frontend/: .env.production  .firebaserc  firebase.json  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.jsx  index.css  router.jsx
frontend/src/api/: client.js  sites.js
frontend/src/contexts/: AuthContext.jsx  TimeRangeContext.jsx
frontend/src/pages/: Admin.jsx  AdminOnboard.jsx  Alerts.jsx  DigitalTwin.jsx  Portfolio.jsx  Site.jsx  TwinAlerts.jsx  TwinAnalytics.jsx  TwinAssets.jsx  TwinReports.jsx  TwinSettings.jsx
migrations/: env.py
migrations/versions/: 0001_initial_hypertables.py  0002_add_config_json_to_sites.py  0003_user_site_access.py  0004_add_expected_energy.py  0005_document_sites_table.py  0006_add_inverters_site_instruments_alerts_views.py
scripts/: ingest_data_viewer.py
src/heliotelligence/: __init__.py  main.py
src/heliotelligence/alerts/: __init__.py  evaluator.py  models.py  rules.py
src/heliotelligence/analysis/: __init__.py  anomaly.py  degradation.py  inverter_health.py  string_health.py
src/heliotelligence/api/: app.py  auth.py
src/heliotelligence/benchmarking/: __init__.py  availability.py  losses.py  performance_ratio.py  yield_metrics.py
src/heliotelligence/collectors/: scada_csv.py  scheduler.py  solcast.py
src/heliotelligence/config/: settings.py  site.py
tests/: conftest.py
tests/fixtures/: bracon_ash_sample.csv
tests/unit/: test_csv_parser.py  test_flags.py  test_normaliser.py  test_scada_csv_collector.py  test_solcast_collector.py  test_sync.py
(+99 files in other folders)
