[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heliotelligence"
version = "0.1.0"
description = "Solar farm digital twin and performance benchmarking platform"
requires-python = ">=3.11"
dependencies = [
    # API & runtime
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # Solar physics
    "pvlib>=0.11.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # HTTP client for Solcast
    "httpx>=0.27.0",
    "tenacity>=8.3.0",

    # Utilities
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",

    # PDF generation
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # test client
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
heliotelligence = "heliotelligence.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/heliotelligence"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/heliotelligence --cov-report=term-missing"
